# lrandom

./: CMakeLists.txt  Makefile  README  dist.info  lrandom.c  random.c  random.def  random.lua  test.lua
